--- a/AppointmentsManager/appsettings.json
+++ b/AppointmentsManager/appsettings.json
@@ -1,10 +1,13 @@
 {
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-"AllowedHosts": "*"
+    }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=DESKTOP-2BUVSP5;Initial Catalog=AppointmentDb;User ID=user;Password=user;TrustServerCertificate=true"
+  }
 }
