--- a/AppointmentsManager/ClientApp/package.json
+++ b/AppointmentsManager/ClientApp/package.json
@@ -10,7 +10,6 @@
     "oidc-client": "^1.11.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.11.0",
     "react-scripts": "^5.0.1",
     "reactstrap": "^9.1.9",
@@ -52,7 +51,8 @@
     "build": "react-scripts build",
     "test": "cross-env CI=true react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "lint": "eslint ./src/"
+    "lint": "eslint ./src/",
+    "dev": "react-scripts start"
   },
   "eslintConfig": {
     "extends": [
